# rusty-git

./: Cargo.toml  LICENSE  README.md
assets/: rusty-git.cast
src/: commit.rs  index.rs  lib.rs  main.rs  object.rs  pack.rs  packet_line.rs  parser.rs  subcommand.rs  tag.rs  tree.rs  utils.rs
src/subcommand/: cat_file.rs  checkout.rs  clone.rs  commit_tree.rs  hash_object.rs  index_pack.rs  init.rs  ls_files.rs  ls_tree.rs  status.rs  unpack_objects.rs  verify_pack.rs  write_tree.rs
