[package]
name = "rusty-git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.12"
flate2 = "1.0.28"
io_tee = "0.1.1"
sha1 = "0.10.6"
tempfile = "3.10.1"
